--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Ultah Alta Yey</title>
+    <link rel="icon" type="image/png" href="111.png">
 </head>
 
 <body>
