--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Ultah Alta Yey</title>
+    <title>Funi's Birthday🎂🎂🎂</title>
     <link rel="icon" type="image/png" href="111.png">
 </head>
 
